Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88780

[REG 5.15.2 -> 6.0.0] undefined behavior in qmake

    XMLWordPrintable

Details

    • 21e77772309df0f2c3fc15f16f9a95214d13f91c (qt/qtbase/dev) 96ea154b0fb6894a9e76357bd7047c648751849b (qt/qtbase/6.0)

    Description

      1. Configure Qt with "-sanitize undefined".
      2. Build Qt.
      3. Run qmake from this Qt build on a .pro file.
        On the command line, you'll see something like:
        /home/qtrob/dev/src/qt-dev-base_svg-11.19/qtbase/qmake/library/proitems.h:236:21: runtime error: null pointer passed as argument 2, which is declared to never be null
        /usr/include/string.h:44:28: note: nonnull attribute specified here
        SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior /home/qtrob/dev/src/qt-dev-base_svg-11.19/qtbase/qmake/library/proitems.h:236:21 in 
        

      With 5.15.2 this does not happen.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes