Fix undefined behavior in ProString/ProKey::appendTo

We must not pass null pointers to memcpy.

Fixes: QTBUG-88780
Change-Id: Ic1d77b4672310a3f6d0d4fbee5f2889e3e4d219d
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 21e77772309df0f2c3fc15f16f9a95214d13f91c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>